Certification and Skills

--- a/src/sections/Skills/Skills.module.css
+++ b/src/sections/Skills/Skills.module.css
@@ -26,6 +26,7 @@
 
 hr{
   width: 100px;
+  visibility: hidden;
   height: 1px;
   border: none;
   background-color: var(--text-color);
@@ -38,7 +39,7 @@ hr{
     gap: 30px;
   
    p {
-    font-size: 23px;
+    font-size: 20px;
     }
   }
 
